# RED4ext.SDK

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CRITICAL_BUGS_ANALYSIS.md  DOCS.md  GAMEPLAY_IMPROVEMENTS.md  INCOMPLETE_FEATURES_ANALYSIS.md  PHASE_PLAN.MD  PLUGIN_SYSTEM.md  THIRD_PARTY_LICENSES.md  THREAD_SAFETY_ISSUES.md  UI_IMPROVEMENTS_SUMMARY.md  final_todo.md  futureIdeas.md  scripting_issues.md  todo.md  todo_queue.json  update.patch
cp2077-coop/: ALL_BUILD.vcxproj  Apartments.csv  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CriticalQuests.json  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  INSTALL.vcxproj  INSTALLATION_GUIDE.md  MINIMAL_FIXES_FOR_TESTING.md  MainQuests.json  Makefile  PACKAGE.vcxproj  README.md  RomanceScenes.json  SideQuests.json  USER_GUIDE.md  ZERO_CHECK.vcxproj  build.ps1  claude_todo.md  cmake_install.cmake  coop_dedicated.vcxproj  cp2077-coop.sln  cp2077-coop.vcxproj  deep_analysis_tracking.md  enet.vcxproj  fetch_dependencies.py  functionality_test.cpp  manifest.json  server.cfg.template  test_network.cpp
cp2077-coop/assets/: assets.manifest  assets.manifest.json
cp2077-coop/assets/ui/: ezestates.html  ezestates.js  gigboard.html  gigboard.js
cp2077-coop/cmake/: FindAL.cmake  FindCURL.cmake  FindJuice.cmake  FindOpenSSL.cmake  FindOpus.cmake  GenerateVersion.cmake
cp2077-coop/juice/: ALL_BUILD.vcxproj  INSTALL.vcxproj  PACKAGE.vcxproj  cmake_install.cmake  juice-static.vcxproj  juice-tests.vcxproj  juice.vcxproj  libjuice.sln
cp2077-coop/opus/: ALL_BUILD.vcxproj  INSTALL.vcxproj  Opus.sln  PACKAGE.vcxproj  cmake_install.cmake  opus.pc  opus.vcxproj
cp2077-coop/phases/: PHASE_PLAN_OUTLINE_DETAILED.MD  Phase_0.md  Phase_1.md  Phase_10.md  Phase_11.md  Phase_12.md  Phase_13.md  Phase_14.md  Phase_15.md  Phase_16.md  Phase_17.md  Phase_18.md  Phase_19.md  Phase_2.md  Phase_20.md  Phase_21.md  Phase_22.md  Phase_3.md  Phase_4.md  Phase_5.md  Phase_6.md  Phase_7.md  Phase_8.md  Phase_9.md
cp2077-coop/src/: CP2077CoopMod.reds  CoopNet.reds  Main.reds  NativeFunctions.reds
cp2077-coop/src/activities/: CorporateRaids.reds  CustomActivities.reds  GameModes.reds  GangWarfare.reds  NetrunningCompetitions.reds  StreetRacing.reds
cp2077-coop/src/ai/: CompanionSystem.reds
cp2077-coop/src/audio/: CoopVoice.reds  VoiceOverQueue.reds
cp2077-coop/src/campaign/: CampaignSync.reds
cp2077-coop/src/config/: ConfigurationManager.cpp  ConfigurationManager.hpp
cp2077-coop/src/connection/: ConnectionManager.reds
cp2077-coop/src/content/: ContentManager.cpp  ContentManager.hpp
cp2077-coop/src/core/: AssetStreamer.cpp  AssetStreamer.hpp  AssetSync.cpp  AssetSync.hpp  ConnectionManager.reds  CoopExports.cpp  CoopExports.hpp  CoopNetCore.cpp  CoopNetCore.hpp  CrashHandler.cpp  ErrorManager.cpp  ErrorManager.hpp  EventSystemBindings.cpp  EventSystemBindings.hpp  FinisherType.hpp  GameClock.cpp  GameClock.hpp  GameModeManager.reds  GameProcess.cpp  GameProcess.hpp  Hash.hpp  HttpClient.cpp  HttpClient.hpp  HttpRequest.reds  Logger.cpp  Logger.hpp  QuestGadget.hpp  Red4extUtils.hpp  SaveFork.cpp  SaveFork.hpp  SaveMigration.cpp  SaveMigration.hpp  SessionState.cpp  SessionState.hpp  Settings.cpp  Settings.hpp  SkillIds.hpp  SpatialGrid.cpp  SpatialGrid.hpp  SystemManager.cpp  (+8 more)
cp2077-coop/src/cutscene/: CutsceneSync.reds
cp2077-coop/src/cyberspace/: DataFortressRaids.reds  VirtualEnvironments.reds
cp2077-coop/src/cyberware/: MultiplayerEnhancements.reds
cp2077-coop/src/database/: DatabaseManager.cpp  DatabaseManager.hpp
cp2077-coop/src/dialog/: DialogIntegration.reds  DialogSessionUI.reds  DialogSystemSync.cpp  DialogSystemSync.hpp  MultiplayerDialog.reds
cp2077-coop/src/economy/: PlayerEconomy.reds
cp2077-coop/src/editor/: EditorEnums.reds  MissionEditor.reds
cp2077-coop/src/endgame/: CommunityChallenges.reds  EndgameProgression.reds  LegacySystem.reds  LegendaryContracts.reds  WorldEventsSystem.reds
cp2077-coop/src/events/: GameEventHooks.cpp  GameEventHooks.hpp
cp2077-coop/src/fashion/: FashionEnums.reds  FashionSystem.reds
cp2077-coop/src/gui/: BreachHud.reds  BusyOverlay.reds  ChatOverlay.reds  CoopMap.reds  CoopNotice.reds  CoopSettings.reds  CoopUI.reds  CoopUIManager.reds  CrashReportPrompt.reds  CyberCooldownHud.reds  DMScoreboard.reds  EZEstate.reds  EmoteWheel.reds  GameProcess.reds  HealthBar.reds  HoloBars.reds  HttpRequest.reds  Killfeed.reds  LootMarkers.reds  MainMenuInjection.reds  MergePrompt.reds  MicIcon.reds  ModManager.reds  ModernServerBrowser.reds  ServerBrowser.reds  ServerHostDialog.reds  SpectatorHUD.reds  StatHud.reds  SyncProgress.reds  VoiceIndicator.reds  WalletHud.reds
cp2077-coop/src/housing/: ApartmentSystem.reds  ApartmentUI.reds  HousingEconomy.reds  HousingEnums.reds
cp2077-coop/src/media/: DynamicNewsSystem.reds  NewsEnums.reds
cp2077-coop/src/memory/: MemoryChipSystem.reds
cp2077-coop/src/net/: Connection.cpp  Connection.hpp  InterestGrid.cpp  InterestGrid.hpp  NatClient.cpp  NatClient.hpp  NatTraversal.cpp  NatTraversal.hpp  Net.cpp  Net.hpp  NetConfig.hpp  NetworkOptimizer.cpp  NetworkOptimizer.hpp  Packets.hpp  PhaseBundle.cpp  Snapshot.hpp  SnapshotWriter.cpp  StatBatch.cpp  StatBatch.hpp  VersionCheck.reds  WorldMarkers.cpp
cp2077-coop/src/nightlife/: NightlifeEnums.reds  NightlifeSystem.reds
cp2077-coop/src/performance/: PerformanceManager.cpp  PerformanceManager.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  PerformanceOptimizer.reds
cp2077-coop/src/physics/: CarPhysics.cpp  CarPhysics.hpp  EnhancedVehiclePhysics.cpp  EnhancedVehiclePhysics.hpp  LagComp.cpp  LagComp.hpp  VehiclePhysics.cpp
cp2077-coop/src/plugin/: PluginManager.cpp  PluginManager.hpp  PythonVM.cpp  PythonVM.hpp  PythonVM_preprocessed.txt
cp2077-coop/tests/: test_handle_packet.py  test_interest_bandwidth.py  test_packet_validation.py  test_quest_sync.py  test_spatial_grid.py
cp2077-coop/tools/: coop_merge.cpp  dedicated_service.sh  fetch_deps.bat  master_server.py
cp2077-coop/ui/: healthbar.inkwidget  ico_hex_cell.inkwidget
(+314 files in other folders)
